<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp" >

    <EditText
        android:id="@+id/et_miembro_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/name2">

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/et_Cant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/nameCant"
        android:inputType="number" />

    <EditText
        android:id="@+id/et_Precio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/namePrecio"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/txtTotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/nameTotal"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right|center"
        android:text="@string/sDesc"
        android:textSize="24sp" />

    <LinearLayout
        android:id="@+id/LL_descuento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <EditText
            android:id="@+id/et_Desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/nameDesc"
            android:maxLength="2"
            android:inputType="number" />

        <TextView
            android:id="@+id/txtTotalDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/nameTotalDesc"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="341dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnCalcular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnCalcular" />

        <Button
            android:id="@+id/btnAgregarId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btnAgregar" />
    </LinearLayout>

</LinearLayout>